Issue 12507: Current document indexing implementation uses pessimistic strategy - any error in indexing module (including non-physical updates) is treated as index corruption and leads to full index rebuild. In reality index corruption should not happen often. New strategy takes more optimistic approach and issues rebuild only on read (search) error. Unfortunately, we do not have any index corruption statics that could show if pessimistic strategy was implemented as a solution against corruption or it was just a premature optimization.
git-svn-id: https://svn.imcode.com/imcode/imcms/branches/RB-4@27317 bd66a97b-2aff-0310-9095-89ca5cabf5a6